--- a/style.css
+++ b/style.css
@@ -188,17 +188,17 @@ a:hover, a:focus {
 }
 
 .tnc p {
-	color:#5C5C5C;
+	color: #8C8C8C;
 	text-align:center;
 }
 
 .tnc a, .tnc a:link, .tnc a:visited {
-  color: #8C8C8C;
+  color: #B6B6B6;
   text-decoration:none;
 }
 
 .tnc a:hover, .tnc a:focus {
-  color: #B6B6B6;
+  color: #D8D8D8;
   text-decoration:underline;
 }
 
