--- a/style.css
+++ b/style.css
@@ -72,6 +72,9 @@
     font-style: normal;
 }
 
+
+/* General
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
 html {
 	font-size: 62.5%;
 }
@@ -152,6 +155,15 @@ h1 {
 	text-transform:uppercase;
 }
 
+h3 {
+	font-family:'livenation-regular';
+	color:#ffffff;
+	text-align:center;
+}
+
+
+/* Links
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
 a, a:link, a:visited {
   color: #E21836;
   text-decoration:none;
@@ -162,6 +174,9 @@ a:hover, a:focus {
   text-decoration:underline;
 }
 
+
+/* Divs
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
 .app-icon {
 	margin-bottom:30px;
 }
@@ -185,7 +200,7 @@ a:hover, a:focus {
   width: 227px;
 }
 
-.row .tnc {
+.row .tnc, .row .text-app-form {
 	margin-top:4.0rem;
 }
 
@@ -203,3 +218,43 @@ a:hover, a:focus {
   color: #D8D8D8;
   text-decoration:underline;
 }
+
+
+/* Forms
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
+input, .btn, .btn-primary {
+	padding: 8px 12px;
+	border:0px;
+	outline:0px;
+	border-radius:0px;
+	margin-top:-1px;
+}
+
+input[type="tel"] {
+	background-color:#c5c5c5; 
+	background-color:rgb(255, 255, 255, 0.2);
+	color:#ffffff;
+	font-family:'livenation-regular';
+}
+
+.btn, .btn-primary, .btn:visited, .btn-primary:visited {
+    text-decoration:none;
+    color:#ffffff;
+    background-color:#E21836;
+    border-color:transparent;
+    text-transform: uppercase;
+    letter-spacing:1px;
+    font-family:'livenation-extrabold';
+    box-shadow:none;
+}
+
+.btn:hover, .btn-primary:hover, .btn:active, .btn-primary:active, .btn:focus, .btn-primary:focus,
+.btn-primary:not(:disabled):not(.disabled).active, .btn-primary:not(:disabled):not(.disabled):active,
+.btn-primary:not(:disabled):not(.disabled).active:focus, .btn-primary:not(:disabled):not(.disabled):active:focus
+ {
+    background-color:#A91128;
+    border-color:transparent;
+    box-shadow:none;
+}
+
+
