--- a/style.css
+++ b/style.css
@@ -1,75 +1,75 @@
 /* Live Nation Font
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 @font-face {
-    font-family: 'live_nationextrabold_italic';
-    src: url('fonts/livenation-extrabolditalic.eot');
-    src: url('fonts/livenation-extrabolditalic.eot?#iefix') format('embedded-opentype'),
-         url('fonts/livenation-extrabolditalic.woff2') format('woff2'),
-         url('fonts/livenation-extrabolditalic.woff') format('woff'),
-         url('fonts/livenation-extrabolditalic.ttf') format('truetype'),
-         url('fonts/livenation-extrabolditalic.svg#live_nationextrabold_italic') format('svg');
-    font-weight: normal;
+    font-family: 'Live Nation Sans';
     font-style: normal;
+    font-weight: 400;
+    src: local('Live Nation Sans Regular'), local('LiveNationSans-Regular'), url('fonts/LiveNationSans-Regular.eot');
+    src: url('fonts/LiveNationSans-Regular.eot?#iefix') format('embedded-opentype'),
+         url('fonts/LiveNationSans-Regular.woff2') format('woff2'),
+         url('fonts/LiveNationSans-Regular.woff') format('woff'),
+         url('fonts/LiveNationSans-Regular.ttf') format('truetype'),
+         url('fonts/LiveNationSans-Regular.svg#LiveNationSans-Regular') format('svg');
 }
 
 @font-face {
-    font-family: 'live_nationbold_italic';
-    src: url('fonts/livenation-bolditalic.eot');
-    src: url('fonts/livenation-bolditalic.eot?#iefix') format('embedded-opentype'),
-         url('fonts/livenation-bolditalic.woff2') format('woff2'),
-         url('fonts/livenation-bolditalic.woff') format('woff'),
-         url('fonts/livenation-bolditalic.ttf') format('truetype'),
-         url('fonts/livenation-bolditalic.svg#live_nationbold_italic') format('svg');
-    font-weight: normal;
-    font-style: normal;
+    font-family: 'Live Nation Sans';
+    font-style: italic;
+    font-weight: 400;
+    src: local('Live Nation Sans Italic'), local('LiveNationSans-Italic'), url('fonts/LiveNationSans-Italic.eot');
+    src: url('fonts/LiveNationSans-Italic.eot?#iefix') format('embedded-opentype'),
+         url('fonts/LiveNationSans-Italic.woff2') format('woff2'),
+         url('fonts/LiveNationSans-Italic.woff') format('woff'),
+         url('fonts/LiveNationSans-Italic.ttf') format('truetype'),
+         url('fonts/LiveNationSans-Italic.svg#LiveNationSans-Italic') format('svg');
 }
 
 @font-face {
-    font-family: 'live_nationitalic';
-    src: url('fonts/livenation-italic.eot');
-    src: url('fonts/livenation-italic.eot?#iefix') format('embedded-opentype'),
-         url('fonts/livenation-italic.woff2') format('woff2'),
-         url('fonts/livenation-italic.woff') format('woff'),
-         url('fonts/livenation-italic.ttf') format('truetype'),
-         url('fonts/livenation-italic.svg#live_nationitalic') format('svg');
-    font-weight: normal;
+    font-family: 'Live Nation Sans';
     font-style: normal;
+    font-weight: 700;
+    src: local('Live Nation Sans Bold'), local('LiveNationSans-Bold'), url('fonts/LiveNationSans-Bold.eot');
+    src: url('fonts/LiveNationSans-Bold.eot?#iefix') format('embedded-opentype'),
+         url('fonts/LiveNationSans-Bold.woff2') format('woff2'),
+         url('fonts/LiveNationSans-Bold.woff') format('woff'),
+         url('fonts/LiveNationSans-Bold.ttf') format('truetype'),
+         url('fonts/LiveNationSans-Bold.svg#LiveNationSans-Bold') format('svg');
 }
 
 @font-face {
-    font-family: 'live_nationextrabold';
-    src: url('fonts/livenation-extrabold.eot');
-    src: url('fonts/livenation-extrabold.eot?#iefix') format('embedded-opentype'),
-         url('fonts/livenation-extrabold.woff2') format('woff2'),
-         url('fonts/livenation-extrabold.woff') format('woff'),
-         url('fonts/livenation-extrabold.ttf') format('truetype'),
-         url('fonts/livenation-extrabold.svg#live_nationextrabold') format('svg');
-    font-weight: normal;
-    font-style: normal;
+    font-family: 'Live Nation Sans';
+    font-style: italic;
+    font-weight: 700;
+    src: local('Live Nation Sans Bold Italic'), local('LiveNationSans-BoldItalic'), url('fonts/LiveNationSans-BoldItalic.eot');
+    src: url('fonts/LiveNationSans-BoldItalic.eot?#iefix') format('embedded-opentype'),
+         url('fonts/LiveNationSans-BoldItalic.woff2') format('woff2'),
+         url('fonts/LiveNationSans-BoldItalic.woff') format('woff'),
+         url('fonts/LiveNationSans-BoldItalic.ttf') format('truetype'),
+         url('fonts/LiveNationSans-BoldItalic.svg#LiveNationSans-BoldItalic') format('svg');
 }
 
 @font-face {
-    font-family: 'live_nationbold';
-    src: url('fonts/livenation-bold.eot');
-    src: url('fonts/livenation-bold.eot?#iefix') format('embedded-opentype'),
-         url('fonts/livenation-bold.woff2') format('woff2'),
-         url('fonts/livenation-bold.woff') format('woff'),
-         url('fonts/livenation-bold.ttf') format('truetype'),
-         url('fonts/livenation-bold.svg#live_nationbold') format('svg');
-    font-weight: normal;
+    font-family: 'Live Nation Sans';
     font-style: normal;
+    font-weight: 800;
+    src: local('Live Nation Sans ExtraBold'), local('LiveNationSans-ExtraBold'), url('fonts/LiveNationSans-ExtraBold.eot');
+    src: url('fonts/LiveNationSans-ExtraBold.eot?#iefix') format('embedded-opentype'),
+         url('fonts/LiveNationSans-ExtraBold.woff2') format('woff2'),
+         url('fonts/LiveNationSans-ExtraBold.woff') format('woff'),
+         url('fonts/LiveNationSans-ExtraBold.ttf') format('truetype'),
+         url('fonts/LiveNationSans-ExtraBold.svg#LiveNationSans-ExtraBold') format('svg');
 }
 
 @font-face {
-    font-family: 'live_nationregular';
-    src: url('fonts/livenation-regular.eot');
-    src: url('fonts/livenation-regular.eot?#iefix') format('embedded-opentype'),
-         url('fonts/livenation-regular.woff2') format('woff2'),
-         url('fonts/livenation-regular.woff') format('woff'),
-         url('fonts/livenation-regular.ttf') format('truetype'),
-         url('fonts/livenation-regular.svg#live_nationregular') format('svg');
-    font-weight: normal;
-    font-style: normal;
+    font-family: 'Live Nation Sans';
+    font-style: italic;
+    font-weight: 800;
+    src: local('Live Nation Sans Extra Bold Italic'), local('LiveNationSans-ExtraBoldItalic'), url('fonts/LiveNationSans-ExtraBoldItalic.eot');
+    src: url('fonts/LiveNationSans-ExtraBoldItalic.eot?#iefix') format('embedded-opentype'),
+         url('fonts/LiveNationSans-ExtraBoldItalic.woff2') format('woff2'),
+         url('fonts/LiveNationSans-ExtraBoldItalic.woff') format('woff'),
+         url('fonts/LiveNationSans-ExtraBoldItalic.ttf') format('truetype'),
+         url('fonts/LiveNationSans-ExtraBoldItalic.svg#LiveNationSans-ExtraBoldItalic') format('svg');
 }
 
 
@@ -88,7 +88,7 @@ body {
 	padding: 50px 20px;
 	font-size: 1.5em; /* currently ems cause chrome bug misinterpreting rems on body element */
 	line-height: 1.4;
-	font-family:'livenation-regular', 'proxima nova', arial, helvetica, sans-serif;
+	font-family: 'Live Nation Sans', 'Helvetica Neue', Arial, sans-serif;
 }
 
 img {max-width:100%;}
@@ -149,14 +149,14 @@ h6, .centi {font-size: 1.12rem;}
 }
 
 h1 {
-	font-family:'livenation-extrabold';
+	font-weight:800;
 	color:#ffffff;
 	text-align:center;
 	text-transform:uppercase;
 }
 
 h3 {
-	font-family:'livenation-regular';
+	font-weight: 400;
 	color:#ffffff;
 	text-align:center;
 }
@@ -232,23 +232,14 @@ input, .btn, .btn-primary {
 	outline:0px;
 	border-radius:0px;
 	min-height:37px;
-}
-
-.btn, .btn-primary {
-	margin-top:-2px;
-}
-
-@media (min-width: 500px) {
-	.btn, .btn-primary {
-		margin-top:-1px;
-	}
+	vertical-align: top;
 }
 
 input[type="tel"] {
 	background-color:#c5c5c5; 
 	background-color:rgb(255, 255, 255, 0.2);
 	color:#ffffff;
-	font-family:'livenation-regular';
+	font-weight: 400;
 }
 
 .btn, .btn-primary, .btn:visited, .btn-primary:visited {
@@ -258,7 +249,7 @@ input[type="tel"] {
     border-color:transparent;
     text-transform: uppercase;
     letter-spacing:1px;
-    font-family:'livenation-extrabold';
+    font-weight: 800;
     box-shadow:none;
 }
 
